--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div id="actions-container">
             <button id="action-reset">RESET</button>
             <button id="action-draw">Draw</button>
+            <button id="action-returning">Return</button>
         </div>
 
         <!-- zone des cartes piochées -->
