--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <div id="cards-container"></div>
     </div>
 
-    <script src="js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="js/axios.js"></script>
 </body>
 </html>
